--- a/backend/package.json
+++ b/backend/package.json
@@ -30,3 +30,18 @@
     "node": ">=14.0.0"
   }
 }
+{
+  "dependencies": {
+    "express-rate-limit": "^7.1.5",
+    "validator": "^13.11.0",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
+  },
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
+  }
+}
